[tool.poetry]
name = "oussama_datalib"
version = "0.1.0"
description = "Simplified data manipulation and analysis tools"
authors = ["Oussama ELAYEB <elayeb.oussama2020@gmail.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/yourusername/datalib"
repository = "https://github.com/yourusername/datalib"
keywords = ["data", "analysis", "machine learning", "visualization"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Visualization"
]
packages = [
    { include = "datalib", from = "src" }
]

[tool.poetry.dependencies]
python = "^3.10"
numpy = ">=1.21.0"
pandas = "^2.2.3"
matplotlib = ">=3.4.0"
seaborn = ">=0.11.0"
scikit-learn = ">=1.0.0"
scipy = ">=1.7.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
# datalib = "datalib.__main__:main"
build-docs = "sphinx:main"